Correct developer documentation of some EBook asynchronous API

Related to https://bugzilla.gnome.org/show_bug.cgi?id=349069